Fixed header, table and contrast on button

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,19 @@ a:hover {
   color: #fff;
   letter-spacing: 5px;
   font-size: 1em;
+  -webkit-transition: all .9s;
+  -moz-transition: all .9s;
+  -ms-transition: all .9s;
+  transition: all .9s;
+}
+
+.name:hover {
+  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  font-weight: 700;
+  margin-left: 20px;
 }
 
 .nav li {
