--- a/css/survey.css
+++ b/css/survey.css
@@ -96,7 +96,7 @@ textarea {
   border-radius: 5px;
   border: none;
   background-color: #00D95F;
-  color: #fff;
+  color: #2d2b30;
 }
 
 .desribe {
